$Id: //main/2015/qhull/src/Changes.txt#28 $

.............This file lists all changes to qhull and rbox.....................

------------
Need help
 - Write an incremental addPoint using bucketed inputs and facet location search (see CGAL)
 - Compute hyperplanes in parallel (cf. qh_setfactplane)
 - Create Voronoi volumes and topology using a parallel implementation
 - Produce conformant triangulations for merged facets using option 'Qt' 
 - Integrate 4dview with Geomview 1.9.5
 - Qhull needs RPM and Debian builds (CMake's CPackRMP and CPackDeb).   
 - Qhull needs a mirror/archive site for old and new builds
 - Constrained delaunay triangulation via Shewchuk's algorithm (ACM Symp. Comp. Geo., 1998)
 - More enhancements -- http://www.qhull.org/html/qh-code.htm#enhance
 - The C++ interface needs work.  Give it a try and make it better. 
   http://github.com/qhull/qhull/wiki

------------
Qhull 2015.2 2016/01/18 (7.2.0) 
 - Fixed memory leak in ~QhullQh [M. Sandim]
   QhullQh.cpp: call checkAndFreeQhullMemory() in the destructor.  Otherwise memT is not freed.
   Remove checkAndFreeQhullMemory() from Qhull.h.  It is not needed.
   Remove calls to checkAndFreeQhullMemory in qhulltest.  It is called by ~QhullQh()
   libqhull_r.h: Document qh_ASvornoi and facetT.center
   qh_freeqhull: if qh_NOmem, use qh_ALL
   qh_memalloc: short memory is freed by qh_memfreeshort unless qh_NOmem
   qh_memstatistics (mem.c): call qh_memcheck() as done in mem_r.c
   qh_new_qhull calls qh_memcheck
   qh_newvertex: free vertex on error
   qh_projectinput: Free memory allocations on error
   qh_rboxpoints: free simplex on error
   qh_sethalfspace_all: Fixed memory leak on error QH8032 feasible not inside halfspace
   qh_triangulate_facet: For TRInormals ('Q11') replace qh_copypoints with qh_memalloc
   qh_triangulate_facet: Document qh.TRInormals
   qh_voronoi_center: Free center on error
   qhulltest: Fixed memory leak of s_testcases by calling RoadTest::deleteTests()