@@ -700,7 +700,7 @@ The problem will be fixed in a future release of Qhull.
 
 <p>To demonstrate the problem, use rbox option 'Cn,r,m' to generate nearly coincident points.
 For more information, see "Nearly coincident points on an edge"
-in <a href="qh-impre.htm#limit</a>Nearly coincident points on an edge</a>.
+in <a href="qh-impre.htm#limit"</a>Nearly coincident points on an edge</a>.
 
 <!-- Navigation links -->
 <hr>
