@@ -87,11 +87,13 @@ If you use Qhull 2003.1. please upgrade or apply <a href="http://www.qhull.org/d
         <a href=http://www.mathworks.com/help/techdoc/ref/griddatan.html>griddatan</a>
         <a href=http://www.mathworks.com/help/techdoc/ref/voronoin.html>voronoin</a>.
     </li>
-        <li>The <a href"http://cran.r-project.org/web/packages/geometry/geometry.pdf">geometry</a> package of <a href="http://www.r-project.org/">R</a> provides <a href="http://geometry.r-forge.r-project.org/">Qhull in R</a>.
+        <li>The <a href="http://cran.r-project.org/web/packages/geometry/geometry.pdf">geometry</a> package of <a href="http://www.r-project.org/">R</a> provides <a href="http://geometry.r-forge.r-project.org/">Qhull in R</a>.
         <li>The <a href="http://packages.debian.org/sid/octave3.2">Debian build</a> of
         <a href=http://www.octave.org/>GNU Octave</a> includes Qhull for <a href="http://www.gnu.org/software/octave/doc/interpreter/Geometry.html">computational geometry<a>.
         <li><a href=http://www.wolfram.com/products/mathematica/>Mathematica</a>'s Delaunay interface <a href=http://library.wolfram.com/infocenter/MathSource/1160/>qh-math</a>
         and <a href="http://portal.uni-freiburg.de/imteksimulation/downloads/ims">QHullInterface</a>
+     <li>The <a href="http://docs.scipy.org/doc/scipy/reference/tutorial/spatial.html">scipy.spatial</a> of <a href="http://scipy.org/">SciPy</a> is implemented with Qhull.  It includes
+     support for Delaunay triangulations,
 </ul>
 </form>
 
@@ -186,6 +188,7 @@ geometry programs and other combinatorial algorithms
         <li><a href=http://www.voronoi.com>Voronoi Web Site</a> for all things Voronoi
         <li>Young's <a href="http://homepage.usask.ca/~ijm451/finite/fe_resources/">Internet Finite Element Resources</a>
         <li><a href="http://www.uic.nnov.ru/~zny/skeleton/">Zolotykh's Skeleton</a> generates all extreme rays of a polyhedral cone using the Double Description Method</li>
+        <li><a href="https://github.com/tomilov/quickhull/blob/master/include/quickhull.hpp">Tomilov's quickhull.hpp</a> (<a href="http://habrahabr.ru/post/245221/">doc-ru</a>) implements the Quickhull algorithm for points in general position.
 </ul>
 
 <p><b>FAQs and Newsgroups</b>
